p3-semantics/tests/DefaultNotProcedure.mj.err
 line 2, column 3: error: default is not a procedure (foo)
