p3-semantics/tests/DefaultNotProcedure.mj
type t = object {
  foo(): int := 5;
};
